--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"fileName": "Risk Asia",
-	"version": "1.10",
+	"version": "Beta 1",
 	"mapFolder": "risk_asia.w3x",
 	"minifyScript": true,
 	"gameExecutable": "D:\\Games\\Warcraft III\\_retail_\\x86_64\\Warcraft III.exe",
